git: ignore renamed binary

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-./go-tea-demo-00
+./go-tea-counter
 
 # Created by https://www.toptal.com/developers/gitignore/api/windows,macos,linux,go,visualstudiocode,git
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,linux,go,visualstudiocode,git
